--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
