--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "keen-slider": "^6.8.5",
     "next": "13.4.1",
     "outstatic": "^0.0.36-canary.1",
     "postcss": "8.4.23",
